--- a/src/Components/itemList/addItemModal/addItemModal.css
+++ b/src/Components/itemList/addItemModal/addItemModal.css
@@ -6,9 +6,14 @@
     height: 100%;
     background-color: rgba(0, 0, 0, 0.5);
     display: flex;
-    overflow: hidden;
+    overflow: scroll;
+    overflow-x: hidden;
     justify-content: center;
     align-items: center;
+}
+
+.addItemModal.show::-webkit-scrollbar {
+    display: none;
 }
 
 .addItemModal.hidden {
@@ -77,6 +82,10 @@
     /* Additional styles specific to datetime-local input */
     /* Adjust as needed */
     height: 38px;
+}
+
+.addItemModal.show .modal .error {
+    color: var(--errorText)
 }
 
 .addItemModal.show .modal .addBtn {
